atualização de layout

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a routerLink="/">Git Users</a></li>
         <li><a routerLink="/searchusers">Buscar Git Users</a></li>
-        <li><a routerLink="/about">Sobre</a></li>
+        <li><a routerLink="/editusers">Sobre</a></li>
          
     </ul>
 
