--- a/src/app/components/pages/gitusers/gitusers.component.sass
+++ b/src/app/components/pages/gitusers/gitusers.component.sass
@@ -24,7 +24,7 @@
 $table-background-color: #f5f5f5
 $table-hover-background-color: #ebebeb
 $table-border-color: #ccc
-$table-cell-padding: 8px
+$table-cell-padding: 5px
 
 div
     width: 100vw
@@ -40,7 +40,9 @@ table
     padding: $table-cell-padding
     text-align: left
     vertical-align: middle
-    border: 1px solid $table-border-color
+
+  th
+    border-bottom: 1px solid $table-border-color
     
 
   th
@@ -55,4 +57,33 @@ table
         color: #fff
         &:hover
             background-color: #555
+
+  .viewlocation 
+      border-right: hidden
+      a 
+        img 
+          width: 25px
+          cursor: pointer
+  
+  .editdelete   
+    display: flex
+    justify-content: space-evenly
+   
+    
+    button 
+      background: none
+      border: none
+      
+      img
+        cursor: pointer
+        width: 24px
+        height: 24px
+    
+
+  
+
+
+        
+
+
 
