--- a/src/app/components/user-edit/user-edit.component.html
+++ b/src/app/components/user-edit/user-edit.component.html
@@ -1,16 +1,34 @@
-<!-- <form [formGroup]="userForm" (ngSubmit)="saveUser()">
-    <label for="login">Login:</label>
-    <input type="text" id="login" formControlName="login" required>
+<ion-header>
+  <ion-toolbar>
+    <ionl-title>Editar Usuário</ionl-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="closeModal()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
   
-    <label for="name">Name:</label>
-    <input type="text" id="name" formControlName="name" required>
-  
-    <label for="email">Email:</label>
-    <input type="email" id="email" formControlName="email" required>
-  
-    <label for="location">Location:</label>
-    <input type="text" id="location" formControlName="location" required>
-  
-    <button type="submit">Save</button>
+  <form>
+    <ion-item>
+      <ion-label>Nome</ion-label>
+      <ion-input [(ngModel)]="users.name" name="nome" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email</ion-label>
+      <ion-input [(ngModel)]="users.email" name="nome" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Localização</ion-label>
+      <ion-input [(ngModel)]="users.location" name="nome" type="text"></ion-input>
+    </ion-item>
+   
   </form>
-   -->
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="saveEdition()">Salvar</ion-button>
