--- a/src/app/components/user-edit/user-edit.component.html
+++ b/src/app/components/user-edit/user-edit.component.html
@@ -14,15 +14,15 @@
   <form>
     <ion-item>
       <ion-label>Nome</ion-label>
-      <ion-input [(ngModel)]="users.name" name="nome" type="text"></ion-input>
+      <ion-input [(ngModel)]="user.name" name="nome" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Email</ion-label>
-      <ion-input [(ngModel)]="users.email" name="nome" type="text"></ion-input>
+      <ion-input [(ngModel)]="user.email" name="nome" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Localização</ion-label>
-      <ion-input [(ngModel)]="users.location" name="nome" type="text"></ion-input>
+      <ion-input [(ngModel)]="user.location" name="nome" type="text"></ion-input>
     </ion-item>
    
   </form>
