--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,7 @@
 <nav>
-    <img src="../../../assets/images/logotipo-do-github.png" alt="">
-    <ul>
-        <li><a routerLink="/">Git Users</a></li>
-        <li><a routerLink="/searchusers">Buscar Git Users</a></li>
-        <li><a routerLink="/editusers">Sobre</a></li>
-         
-    </ul>
-
+  <img src="../../../assets/images/logotipo-do-github.png" alt="" />
+  <ul>
+    <li><a routerLink="/">Git Users</a></li>
+    <li><a routerLink="/searchusers">Buscar Git Users</a></li>
+  </ul>
 </nav>
