--- a/src/styles.sass
+++ b/src/styles.sass
@@ -26,3 +26,24 @@ a:hover
         display: flex
         flex-direction: column
         margin-bottom: 1em
+
+.confirm
+    width: 500px
+    height: 200px
+    position: absolute
+    top: 40%
+
+.green-title
+    color: #006400
+
+.registered-user
+    color: #FFD700
+  
+
+.unregistered-user
+    color: #FF0000
+
+.custom-ok-button 
+  background-color: #696969 !important
+  color: #000 !important
+  border: #696969  !important
