--- a/src/app/components/pages/gitusers/gitusers.component.html
+++ b/src/app/components/pages/gitusers/gitusers.component.html
@@ -1,37 +1,43 @@
 <div>
-<h2>Lista de Usuários</h2>
-
-<table>
-   <thead>
+  <h2>Lista de Usuários</h2>
+  <table>
+    <thead>
       <tr>
         <th>Usuário</th>
         <th>Nome</th>
         <th>Email</th>
         <th class="viewlocation"></th>
         <th>Localização</th>
-        <th ></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users">
-        <td>{{ user.username }}</td>
+        <td>{{ user.login }}</td>
         <td>{{ user.name }}</td>
-        <td>{{ user.email? user.email: 'Não informado' }}</td>
+        <td>{{ user.email ? user.email : "Não informado" }}</td>
         <td class="viewlocation">
-          <a href="">
-            <img src="../../../../assets/images/earthiconpurpple.svg" alt="realLocation">
-          </a>
-        </td>
-        <td>{{ user.location? user.location: 'Não Informada' }}</td>
-        <td class="editdelete">
-          <button  type="" (click)="openModal()">
-            <img src="../../../../assets/images/editicon.svg" alt="Editar Usuários">
+          <button (click)="openModalMap(user.location)">
+            <img
+              src="../../../../assets/images/earthiconpurpple.svg"
+              alt="realLocation"
+            />
           </button>
-          <button  type="submit">
-            <img src="../../../../assets/images/deleteicon.svg" alt="">
+        </td>
+        <td>{{ user.location ? user.location : "Não Informada" }}</td>
+        <td class="editdelete">
+          <button (click)="selectUser(user)">
+            <img
+              src="../../../../assets/images/editicon.svg"
+              alt="Editar Usuários"
+            />
+          </button>
+
+          <button (click)="deleteUser(user)">
+            <img src="../../../../assets/images/deleteicon.svg" alt="" />
           </button>
         </td>
       </tr>
     </tbody>
   </table>
- </div>
+</div>
