--- a/src/app/components/pages/gitusers/gitusers.component.sass
+++ b/src/app/components/pages/gitusers/gitusers.component.sass
@@ -1,73 +1,57 @@
-// table
-//     width: 100vw
-//     display: flex
-//     flex-direction: column
-//     align-items: center
-
-//     thead, tbody
-//         width: 100%
-//         display: flex
-//         flex-direction: column
-//         align-items: center
-
-//         th, tr
-//             display: flex
-//             width: 90vw
-//             justify-content: space-between
-     
-//     template
-//         width: 100%
-//         display: flex
-//         flex-direction: column
-//         align-items: center
-
 $table-background-color: #f5f5f5
 $table-hover-background-color: #ebebeb
 $table-border-color: #ccc
 $table-cell-padding: 5px
 
 div
-    width: 100vw
-    display: flex
-    flex-direction: column
-    align-items: center
+  width: 95vw
+  display: flex
+  flex-direction: column
+  align-items: center
 
-table
-  width: 98%
-  border-collapse: collapse
+  .confirm
+    width: 500px
+    height: 200px
+    position: absolute
+    top: 40%
 
-  th, td
-    padding: $table-cell-padding
-    text-align: left
-    vertical-align: middle
 
-  th
-    border-bottom: 1px solid $table-border-color
-    
+  table
+    width: 98%
+    border-collapse: collapse
 
-  th
-    font-weight: bold
+    th, td
+      padding: $table-cell-padding
+      text-align: left
+      vertical-align: middle
 
-  tbody tr:hover
-    background-color: $table-hover-background-color
+    th
+      border-bottom: 1px solid $table-border-color
+      
 
-    #edit
-        cursor: pointer
-        background-color: #777
-        color: #fff
-        &:hover
-            background-color: #555
+    th
+      font-weight: bold
 
-  .viewlocation 
-      border-right: hidden
-      a 
-        img 
-          width: 25px
+    tbody tr:hover
+      background-color: $table-hover-background-color
+
+      #edit
           cursor: pointer
-  
-  .editdelete   
-    display: flex
-    justify-content: space-evenly
+          background-color: #777
+          color: #fff
+          &:hover
+              background-color: #555
+
+    .viewlocation 
+        border-right: hidden
+        a 
+          img 
+            width: 25px
+            cursor: pointer
+    
+    .editdelete   
+      display: flex
+      justify-content: space-evenly
    
     
     button 
@@ -78,12 +62,3 @@ table
         cursor: pointer
         width: 24px
         height: 24px
-    
-
-  
-
-
-        
-
-
-
