--- a/src/app/components/search-users-form/search-users-form.component.html
+++ b/src/app/components/search-users-form/search-users-form.component.html
@@ -1,20 +1,26 @@
 <div class="myForm">
-    <div class="formGroup">
-        <label for="name">Usuário que deseja encontrar</label>
-        <input type="text"  [(ngModel)]="searchUserName" placeholder="Digite o nome do usuário" required/>
-        <button id="submit" (click)="searchUser(searchUserName)">Procurar</button>
-    </div>
-    <div *ngIf="searchUser">
-     
-        <form *ngIf="searchUser"  (submit)="pushData(user)">
-                <h2>Usuário {{ user.login }}</h2>
-                <p>Nome: {{ user.name }}</p>
-                <p>Email: {{ user.email? user.email : 'Email não informado.' }}</p>
-                <p>Local: {{ user.location? user.location: 'Localização não informada' }}</p>
-                               
-                <button id="confirm-user" *ngIf="searchUser" type="submit">Salvar Usuário</button>
-        </form>
+  <div class="formGroup">
+    <label for="name">Usuário que deseja encontrar</label>
+    <input
+      type="text"
+      [(ngModel)]="searchUserName"
+      placeholder="Digite o nome do usuário"
+      required
+    />
+    <button id="submit" (click)="searchUser(searchUserName)">Procurar</button>
+  </div>
+  <div *ngIf="user">
+    <form *ngIf="searchUser" (submit)="pushData(user)">
+      <h2>Usuário {{ user.login }}</h2>
+      <p>Nome: {{ user.name }}</p>
+      <p>Email: {{ user.email ? user.email : "Email não informado." }}</p>
+      <p>
+        Local: {{ user.location ? user.location : "Localização não informada" }}
+      </p>
 
-    </div>  
-       
+      <button id="confirm-user" *ngIf="searchUser" type="submit">
+        Salvar Usuário
+      </button>
+    </form>
+  </div>
 </div>
